--- a/serverless.yml
+++ b/serverless.yml
@@ -9,12 +9,13 @@ provider:
   region: us-east-1
 
 functions:
-  createQuestion:
-    handler: handler.createQuestion # point to exported create function in handler.js
+  # /questions
+  getAllQuestions:
+    handler: handler.getAllQuestions
     events:
       - http:
           path: questions
-          method: post
+          method: get
           cors: true
   getOneQuestion:
     handler: handler.getOneQuestion
@@ -22,6 +23,13 @@ functions:
       - http:
           path: questions/{id}
           method: get
+          cors: true
+  createQuestion:
+    handler: handler.createQuestion # point to exported create function in handler.js
+    events:
+      - http:
+          path: questions
+          method: post
           cors: true
   updateQuestion:
     handler: handler.updateQuestion
@@ -37,19 +45,21 @@ functions:
           path: questions/{id}
           method: delete
           cors: true
-  getAllQuestions:
-    handler: handler.getAllQuestions
-    events:
-      - http:
-          path: questions
-          method: get
-          cors: true
+
+  # /quiz
   getQuiz:
     handler: handler.getQuiz
     events:
       - http:
           path: quiz
           method: get
+          cors: true
+  checkQuiz:
+    handler: handler.checkQuiz
+    events:
+      - http:
+          path: quiz
+          method: post
           cors: true
 plugins:
 - serverless-offline # adding the plugin to be able to run the offline emulation
